5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_1014.log
== TEST (2019-04-02 01:28:18) 
-- CODE:
tot_vendas=30
lucro=tot_vendas*0.3
print(lucro)
-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:28:22) 
-- CODE:
tot_vendas=30
lucro=tot_vendas*0.3
print(lucro)
-- EXECUTION TIME:
0.128728
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:33:06) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
print(round(x, 2))
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:33:07) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
print(round(x, 2))
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:35:02) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(lucro)
-- OUTPUT:
210.15
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:35:09) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(lucro)
-- EXECUTION TIME:
0.194279
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:35:17) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(lucro)
-- OUTPUT:
210.15
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:35:35) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(lucro)
-- EXECUTION TIME:
0.187211
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:35:46) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(x)
-- OUTPUT:
210.15
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:35:51) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))
print(x)
-- EXECUTION TIME:
0.146437
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:36:02) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:36:05) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:36:11) 
-- CODE:
v=float(input("tot_vendas"))
lucro=v*30/100
x=lucro
print(round(x, 2))

-- EXECUTION TIME:
0.1615
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
